// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateWalletName should not render if not open 1`] = `<DocumentFragment />`;

exports[`UpdateWalletName should render a modal 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 cpRbqw"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdfBwQ bSxmtR"
                height="14"
                width="14"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Wallet Name
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <div
              class="mt-8"
            >
              <fieldset
                class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
              >
                <label
                  class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                  <span
                    class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="FormLabel__optional"
                  >
                    optional
                  </span>
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="fixed invisible w-auto whitespace-nowrap"
                  >
                    …
                  </div>
                  <div
                    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
                  >
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        aria-invalid="false"
                        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 eXxJsW"
                  data-testid="UpdateWalletName__submit"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 cpRbqw"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdfBwQ bSxmtR"
                height="14"
                width="14"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Wallet Name
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <div
              class="mt-8"
            >
              <fieldset
                class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
              >
                <label
                  class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                  <span
                    class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="FormLabel__optional"
                  >
                    optional
                  </span>
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="fixed invisible w-auto whitespace-nowrap"
                  >
                    …
                  </div>
                  <div
                    class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
                  >
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        aria-invalid="true"
                        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                    >
                      <span
                        data-errortext="The name 'ARK Wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="sc-bdfBwQ hjDozt text-theme-danger-500"
                          height="20"
                          width="20"
                        >
                          <svg>
                            alert-warning.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 2`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 cpRbqw"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdfBwQ bSxmtR"
                height="14"
                width="14"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Wallet Name
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <div
              class="mt-8"
            >
              <fieldset
                class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
              >
                <label
                  class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                  <span
                    class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="FormLabel__optional"
                  >
                    optional
                  </span>
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="fixed invisible w-auto whitespace-nowrap"
                  >
                    …
                  </div>
                  <div
                    class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
                  >
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        aria-invalid="true"
                        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                    >
                      <span
                        data-errortext="The name 'ark wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="sc-bdfBwQ hjDozt text-theme-danger-500"
                          height="20"
                          width="20"
                        >
                          <svg>
                            alert-warning.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 3`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 cpRbqw"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdfBwQ bSxmtR"
                height="14"
                width="14"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Wallet Name
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <div
              class="mt-8"
            >
              <fieldset
                class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
              >
                <label
                  class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                  <span
                    class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="FormLabel__optional"
                  >
                    optional
                  </span>
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="fixed invisible w-auto whitespace-nowrap"
                  >
                    …
                  </div>
                  <div
                    class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
                  >
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        aria-invalid="true"
                        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                    >
                      <span
                        data-errortext="The name 'ARK Wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="sc-bdfBwQ hjDozt text-theme-danger-500"
                          height="20"
                          width="20"
                        >
                          <svg>
                            alert-warning.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 4`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 cpRbqw"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdfBwQ bSxmtR"
                height="14"
                width="14"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Wallet Name
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <div
              class="mt-8"
            >
              <fieldset
                class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
              >
                <label
                  class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                  <span
                    class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="FormLabel__optional"
                  >
                    optional
                  </span>
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="fixed invisible w-auto whitespace-nowrap"
                  >
                    …
                  </div>
                  <div
                    class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
                  >
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        aria-invalid="true"
                        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                    >
                      <span
                        data-errortext="The name 'ARK Wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="sc-bdfBwQ hjDozt text-theme-danger-500"
                          height="20"
                          width="20"
                        >
                          <svg>
                            alert-warning.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show error message when name consists only of whitespace 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 cpRbqw"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdfBwQ bSxmtR"
                height="14"
                width="14"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Wallet Name
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <div
              class="mt-8"
            >
              <fieldset
                class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
              >
                <label
                  class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                  <span
                    class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="FormLabel__optional"
                  >
                    optional
                  </span>
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="fixed invisible w-auto whitespace-nowrap"
                  >
                    …
                  </div>
                  <div
                    class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
                  >
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        aria-invalid="true"
                        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                    >
                      <span
                        data-errortext="Wallet Name invalid"
                        data-testid="Input__error"
                      >
                        <div
                          class="sc-bdfBwQ hjDozt text-theme-danger-500"
                          height="20"
                          width="20"
                        >
                          <svg>
                            alert-warning.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show error message when name exceeds 42 characters 1`] = `
<DocumentFragment>
  <div
    class="flex fixed inset-0 z-50 py-20 w-full h-full bg-opacity-60 dark:bg-opacity-80 bg-theme-secondary-900-rgba overflow-overlay dark:bg-black-rgba"
    data-testid="modal__overlay"
  >
    <div
      class="Modal__ModalContainer-sc-1pv7yg7-0 cpRbqw"
      tabindex="-1"
    >
      <div
        class="flex overflow-hidden relative flex-col p-10 shadow-2xl rounded-2.5xl bg-theme-background"
        data-testid="modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded transition-all duration-100 ease-linear bg-theme-primary-100 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400 hover:bg-theme-primary-300"
        >
          <button
            class="OriginalButton__StyledButton-sc-1y2wptt-0 fNHPRi w-11 h-11"
            data-testid="modal__close-btn"
            type="button"
          >
            <div
              class="flex relative items-center space-x-2"
            >
              <div
                class="sc-bdfBwQ bSxmtR"
                height="14"
                width="14"
              >
                <svg>
                  cross-slim.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-3xl font-bold"
          >
            Wallet Name
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <div
              class="mt-8"
            >
              <fieldset
                class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
              >
                <label
                  class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                  <span
                    class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
                    data-testid="FormLabel__optional"
                  >
                    optional
                  </span>
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="fixed invisible w-auto whitespace-nowrap"
                  >
                    …
                  </div>
                  <div
                    class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
                  >
                    <div
                      class="relative flex flex-1 h-full"
                    >
                      <input
                        aria-invalid="true"
                        class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                    >
                      <span
                        data-errortext="Name should have at most 42 characters"
                        data-testid="Input__error"
                      >
                        <div
                          class="sc-bdfBwQ hjDozt text-theme-danger-500"
                          height="20"
                          width="20"
                        >
                          <svg>
                            alert-warning.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 icFlST"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex relative items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
